src/types/tests/snapshots/tgbot__types__tests__menu__menu_button-3.snap
---
source: src/types/tests/menu.rs
expression: "MenuButton::WebApp(MenuButtonWebApp::new(\"button-text\",\nWebAppInfo::from(\"https://example.com\"),))"
---
{
  "type": "web_app",
  "text": "button-text",
  "web_app": {
    "url": "https://example.com"
  }
}
