src/types/tests/snapshots/tgbot__types__tests__menu__menu_button.snap
---
source: src/types/tests/menu.rs
expression: "MenuButton::Commands"
---
{
  "type": "commands"
}
