src/types/tests/snapshots/tgbot__types__tests__menu__set_chat_menu_button-3.snap
---
source: src/types/tests/menu.rs
expression: actual_data
---
{
  "menu_button": {
    "type": "default"
  }
}
