src/types/tests/snapshots/tgbot__types__tests__menu__set_chat_menu_button-4.snap
---
source: src/types/tests/menu.rs
expression: actual_data
---
{
  "chat_id": 1,
  "menu_button": {
    "type": "commands"
  }
}
